Change log started October 2009.

June 2010
================================================================================
Add support for Glulx.
Handle errors properly.
Handle OPTIONS and send Access-Control headers for preflighted requests.

February 2010
================================================================================
 + A few changes were needed for it to actually work.
 + Add support for a callback function.

January 2010
================================================================================
 + Began working on version 2
 + Split out get_file() to mirror.get().
 + Renamed MainHandler to LegacyHandler and added ProxyHandler.


October 2009
================================================================================
 - Use simplejson so json.py can be removed.
 + Use memcache to cache file downloads.